--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ a:hover {
     padding: 0;
     margin: 0;
     opacity: 0.5;
-    display: block;
+    display: none;
 }
 
 .btn {
@@ -121,19 +121,19 @@ a:hover {
     position: fixed; 
     background-color: #ffffff;
     z-index: 9999;
-    display: block;
+    display: none;
     
     width: 45%; 
-    height: auto; 
+    height: 54%;
+    overflow-y: auto;
     margin-left: -22%;  
     left: 50%;  
-    top: 15%;
+    top: 10%;
     overflow: auto;
     border-radius: 4px;
 }
 
 #wrapp_form_feedback > div {
-        border-bottom: 1px #cccccc solid;
         padding: 1%;
 }
 
@@ -159,7 +159,7 @@ a:hover {
             width: 100%;
         }
         
-            .name-field {
+            .label-field {
                 display: inline-block;
                 width: 38%;
                 text-align: right;
@@ -229,8 +229,10 @@ a:hover {
                     background: #767474;
                     box-shadow: 0 3px #767474 inset;
                 }
-
-
+                
+        .add-border-bottom {
+            border-bottom: 1px #cccccc solid;
+        }        
 
 /*-- END FORM FEEDBACK --*/
 
@@ -447,7 +449,7 @@ footer {
     
     h2 {font-size:15px; font-size:1.5rem;}
     
-    h3 {font-size:13px; font-size:1.3rem;}
+    h3 {font-size:8px; font-size:0.8rem;}
 
     p {font-size:7px; font-size:0.7rem;}
     
@@ -460,7 +462,7 @@ footer {
         margin-left: -27%;  
     }
     
-        .name-field {
+        .label-field {
         font-size: 7px; font-size: 0.7rem;
         }
             
@@ -522,9 +524,9 @@ footer {
         
     h1 {font-size:14px; font-size:1.4rem;}
     
-    h2 {font-size:12px; font-size:1.2rem;}
+    h2 {font-size:11px; font-size:1.1rem;}
     
-    h3 {font-size:10px; font-size:1rem;}
+    h3 {font-size:7px; font-size:0.7rem;}
 
     p {font-size:6px; font-size:0.6rem;}
     
@@ -537,15 +539,20 @@ footer {
         margin-left: -41%;  
     }
     
-            .name-field {
-                width: 98%;
+    .form-feedback {
+        margin: 4% 0 0 0;
+    }
+    
+            .label-field {
+                width: 95%;
                 text-align: left;
                 font-size: 6px; font-size: 0.6rem;
+                margin: 0 0 2% 3%;
             }
             
             .field, textarea {
-                width: 98%;
-                margin: 0 0 2% 0;
+                width: 92%;
+                margin: 0 3% 2% 3%;
             }
             
             .wrapp-checkbox {
@@ -562,8 +569,8 @@ footer {
                 }
 
         .btn-submit {
-            width: 100%;
-            margin: 0 0 6% 0;
+            width: 92%;
+            margin: 0 3% 6% 3%;
         }
         
     /*-- END FORM FEEDBACK --*/
